# yolov8-openvino-cpp

./: .gitignore  CMakeLists.txt  Makefile  handler.cpp  handler.h  inference.cpp  inference.h  main.cpp  timer.cpp  timer.h
